--- a/tasks/updates-all.yml
+++ b/tasks/updates-all.yml
@@ -3,16 +3,18 @@
 - name: check for available updates
   win_updates:
     category_names: "{{ win_update_category_names }}"
-    blacklist: "{{ win_update_blacklist | default(omit) }}"
+    reject_list: "{{ win_update_blacklist | default(omit) }}"
     state: searched
   register: available_updates
 
 - debug:
     msg: |
       {{ inventory_hostname }} has {{ available_updates.found_update_count }} updates available.
-      {% for key, value in available_updates.updates.items() %}
-        - {{ value.title }}
+      {% for update in updates %}
+        - {{ update.title }}
       {% endfor %}
+  vars:
+    updates: "{{ (available_updates.updates.values() | list) if (available_updates.updates is mapping) else (available_updates.updates) }}"
   when: available_updates.updates is defined
 
 - include_tasks: updates-with-retry.yml
@@ -20,7 +22,7 @@
     - available_updates.updates is defined
     - available_updates.found_update_count > 0
 
-- name: check for missing updates.
+- name: check for missing updates
   win_updates:
     state: searched
   register: available_updates
