--- a/tasks/updates-with-retry.yml
+++ b/tasks/updates-with-retry.yml
@@ -6,8 +6,8 @@
         - name: install all windows updates
           win_updates:
             category_names: "{{ win_update_category_names }}"
-            blacklist: "{{ (win_update_blacklist | default([])) + (failed_kb | default([])) }}"
-            whitelist: "{{ win_update_whitelist | default(omit) }}"
+            reject_list: "{{ (win_update_blacklist | default([])) + (failed_kb | default([])) }}"
+            accept_list: "{{ win_update_whitelist | default(omit) }}"
             reboot: yes
           register: installed_updates
 
@@ -40,8 +40,8 @@
     - name: work on any skipped KB
       win_updates:
         category_names: "{{ win_update_category_names }}"
-        blacklist: "{{ win_update_blacklist | default(omit) }}"
-        whitelist: "{{ failed_kb | default([]) }}"
+        reject_list: "{{ win_update_blacklist | default(omit) }}"
+        accept_list: "{{ failed_kb | default([]) }}"
         reboot: yes
       register: installed_updates_retry_skipped
       when:
@@ -51,16 +51,18 @@
     - name: check for missing updates
       win_updates:
         category_names: "{{ win_update_category_names }}"
-        blacklist: "{{ win_update_blacklist | default(omit) }}"
+        reject_list: "{{ win_update_blacklist | default(omit) }}"
         state: searched
       register: missing_updates
 
     - debug:
         msg: |
           {{ inventory_hostname }} has {{ missing_updates.found_update_count }} updates still missing.
-          {% for key, value in missing_updates.updates.items() %}
-            - {{ value.title }}
+          {% for update in updates %}
+            - {{ update.title }}
           {% endfor %}
+      vars:
+        updates: "{{ (missing_updates.updates.values() | list) if (missing_updates.updates is mapping) else (missing_updates.updates) }}"
       when: missing_updates.updates is defined
 
     - name: still more updates - need to retry
