--- a/tasks/updates-win2008r2.yml
+++ b/tasks/updates-win2008r2.yml
@@ -13,19 +13,25 @@
     state: present
     elements: "C:\\Program Files (x86)\\Windows Kits\\10\\Assessment and Deployment Kit\\Deployment Tools\\amd64\\DISM"
 
-- name: download hotfix group 1 (PS >= 4)
+- name: download hotfix group 1
   win_get_url:
     url: '{{ item.url }}'
     dest: '{{ hotfix_download_location }}\{{ item.file }}'
   loop: "{{ hotfixes_group_1 }}"
 
-- name: install hotfix group 1
-  win_hotfix:
-    source: '{{ hotfix_download_location }}\{{ item.file }}'
-    state: present
-  register: hotfix_install_group_1
-  loop: "{{ hotfixes_group_1 }}"
-  when: ansible_powershell_version is version('4', '>=')
+- block:
+    - name: install hotfix group 1 (PS >= 4)
+      win_hotfix:
+        source: '{{ hotfix_download_location }}\{{ item.file }}'
+        state: present
+      register: hotfix_install_group_1
+      loop: "{{ hotfixes_group_1 }}"
+      when: ansible_powershell_version is version('4', '>=')
+  rescue:
+    - name: install hotfix using shell
+      win_shell: '{{ hotfix_download_location }}\{{ item.file }} /quiet /norestart'
+        register: hotfix_install_group_1
+        loop: "{{ hotfixes_group_1 }}"
 
 - name: install hotfix (PS == 3)
   win_shell: '{{ hotfix_download_location }}\{{ item.file }} /quiet /norestart'
