--- a/tasks/updates-all.yml
+++ b/tasks/updates-all.yml
@@ -3,7 +3,7 @@
 - name: check for available updates
   win_updates:
     category_names: "{{ win_update_category_names }}"
-    blacklist: "{{ win_update_blacklist | default(omit) }}"
+    reject_list: "{{ win_update_reject_list | default(omit) }}"
     state: searched
   register: available_updates
 
