--- a/tasks/updates-with-retry.yml
+++ b/tasks/updates-with-retry.yml
@@ -6,8 +6,8 @@
         - name: install all windows updates
           win_updates:
             category_names: "{{ win_update_category_names }}"
-            blacklist: "{{ (win_update_blacklist | default([])) + (failed_kb | default([])) }}"
-            whitelist: "{{ win_update_whitelist | default(omit) }}"
+            reject_list: "{{ (win_update_reject_list | default([])) + (failed_kb | default([])) }}"
+            accept_list: "{{ win_update_accept_list | default(omit) }}"
             reboot: yes
           register: installed_updates
 
@@ -40,8 +40,8 @@
     - name: work on any skipped KB
       win_updates:
         category_names: "{{ win_update_category_names }}"
-        blacklist: "{{ win_update_blacklist | default(omit) }}"
-        whitelist: "{{ failed_kb | default([]) }}"
+        reject_list: "{{ win_update_reject_list | default(omit) }}"
+        accept_list: "{{ failed_kb | default([]) }}"
         reboot: yes
       register: installed_updates_retry_skipped
       when:
@@ -51,7 +51,7 @@
     - name: check for missing updates
       win_updates:
         category_names: "{{ win_update_category_names }}"
-        blacklist: "{{ win_update_blacklist | default(omit) }}"
+        reject_list: "{{ win_update_reject_list | default(omit) }}"
         state: searched
       register: missing_updates
 
