--- a/tasks/updates-with-retry.yml
+++ b/tasks/updates-with-retry.yml
@@ -72,7 +72,7 @@
           {{ (update_retry_limit | int) - (update_retry_count | int) }} more retries left'
       when:
         - missing_updates.found_update_count > 0
-        - ((update_retry_limit | int) - (update_retry_count | int) >= 0)
+        - ((update_retry_limit | int) - (update_retry_count | int) > 0)
 
   rescue:
     - name: set update count
@@ -80,7 +80,7 @@
         update_retry_count: '{{ update_retry_count | default(0) | int + 1 }}'
 
     - debug:
-        msg: "Still more updates remaining - retrying... ({{ update_retry_count }}/{{ update_retry_limit }})"
+        msg: "Still more updates ({{ missing_updates.found_update_count }}) remaining - retrying... ({{ update_retry_count }}/{{ update_retry_limit }})"
 
     - include_tasks: updates-with-retry.yml
-      when: ((update_retry_limit | int) - (update_retry_count | int) >= 0)
+      when: ((update_retry_limit | int) - (update_retry_count | int) > 0)
