--- a/tasks/updates-with-retry.yml
+++ b/tasks/updates-with-retry.yml
@@ -80,7 +80,9 @@
         update_retry_count: '{{ update_retry_count | default(0) | int + 1 }}'
 
     - debug:
-        msg: "Still more updates ({{ missing_updates.found_update_count | default(installed_updates.found_update_count) }}) remaining - retrying... ({{ update_retry_count }}/{{ update_retry_limit }})"
+        msg: "Still more updates ({{ current_update_count }}) remaining - retrying... ({{ update_retry_count }}/{{ update_retry_limit }})"
+      vars:
+        current_update_count: "{{ missing_updates.found_update_count | default(installed_updates.found_update_count) | default('-') }}"
 
     - include_tasks: updates-with-retry.yml
       when: ((update_retry_limit | int) - (update_retry_count | int) > 0)
