--- a/tasks/updates-all.yml
+++ b/tasks/updates-all.yml
@@ -4,6 +4,7 @@
   win_updates:
     category_names: "{{ win_update_category_names }}"
     reject_list: "{{ win_update_reject_list | default(omit) }}"
+    server_selection: "{{ win_update_server_selection }}"
     state: searched
   register: available_updates
 
@@ -24,6 +25,7 @@
 
 - name: check for missing updates
   win_updates:
+    server_selection: "{{ win_update_server_selection }}"
     state: searched
   register: available_updates
 
