--- a/tasks/updates-with-retry.yml
+++ b/tasks/updates-with-retry.yml
@@ -10,6 +10,7 @@
 
         - name: install all windows updates
           win_updates:
+            server_selection: "{{ win_update_server_selection }}"
             category_names: "{{ win_update_category_names }}"
             reject_list: "{{ _reject_list | default(omit) }}"
             accept_list: "{{ win_update_accept_list | default(omit) }}"
@@ -44,6 +45,7 @@
 
     - name: work on any skipped KB
       win_updates:
+        server_selection: "{{ win_update_server_selection }}"
         category_names: "{{ win_update_category_names }}"
         reject_list: "{{ win_update_reject_list | default(omit) }}"
         accept_list: "{{ failed_kb | default(omit) }}"
@@ -55,6 +57,7 @@
 
     - name: check for missing updates
       win_updates:
+        server_selection: "{{ win_update_server_selection }}"
         category_names: "{{ win_update_category_names }}"
         reject_list: "{{ win_update_reject_list | default(omit) }}"
         state: searched
