Add conditional firewall disable (#1)
* Add boolean to optionally disable fw

* update boolean

* Create blocks for 'when' conditional fw disable

* fix syntax

* Revert "fix syntax"

This reverts commit ddf18967fe8c7111758de4f38a389b14a121bd04.

* Revert "Create blocks for 'when' conditional fw disable"

This reverts commit 6569f0791aefb9fbc5f0b38a8e1de92f6deb371f.

Co-authored-by: Alex Kraker <alex.kraker@benimbl.com>

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -12,6 +12,7 @@ win_update_category_names:
 win_update_reject_list: []
 win_update_accept_list: []
 win_update_server_selection: default
+win_update_disable_firewall: yes
 failed_kb: []
 
 temp_directory: "{{ ansible_env.TEMP }}"
