use async move hotfix installation to a new role

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,13 +1,17 @@
 ---
 
+install_updates_retry_limit: 300
 update_retry_count: 0
 update_retry_limit: 10
-win_update_category_names:
-  - CriticalUpdates
-  - DefinitionUpdates
-  - SecurityUpdates
-  - UpdateRollups
-  - Updates
+
+win_update_category_names: '*'
+#win_update_category_names:
+#  - CriticalUpdates
+#  - DefinitionUpdates
+#  - FeaturePacks
+#  - SecurityUpdates
+#  - UpdateRollups
+#  - Updates
 
 win_update_reject_list: []
 win_update_accept_list: []
@@ -15,7 +19,8 @@ win_update_server_selection: default
 failed_kb: []
 
 temp_directory: "{{ ansible_env.TEMP }}"
-hotfix_download_location: "{{ temp_directory }}"
+
+windows_hotfix_role: oatakan.windows_hotfix
 
 hotfixes:
   - kb: KB3020369
