--- a/tasks/updates-win2008r2.yml
+++ b/tasks/updates-win2008r2.yml
@@ -28,12 +28,13 @@
   register: available_updates
 
 - debug:
-    msg: |
+    msg: "{{ _msg.split('\n')[:-1] }}"
+  vars:
+    _msg: |
       {{ inventory_hostname }} has {{ available_updates.found_update_count }} updates available.
       {% for update in updates %}
         - {{ update.title }}
       {% endfor %}
-  vars:
     updates: "{{ (available_updates.updates.values() | list) if (available_updates.updates is mapping) else (available_updates.updates) }}"
   when: available_updates.updates is defined
 
