--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -41,6 +41,13 @@
 - include_tasks: updates-win2008r2.yml
   when:
     - "'Windows Server 2008' in ansible_distribution or 'Windows 7' in ansible_distribution"
+    - ansible_powershell_version is not defined or (ansible_powershell_version | string) is version('5.0', '>=')
+
+- include_tasks: updates-powershell.yml
+  when:
+    - "'Windows Server 2008' in ansible_distribution or 'Windows 7' in ansible_distribution"
+    - ansible_powershell_version is defined
+    - (ansible_powershell_version | string) is version('5.0', '<')
 
 - name: get used space after update
   win_shell: Get-PSDrive C | Select-Object Used | ConvertTo-Json
