Update minimum Ansible version and clean up metadata

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,24 +3,17 @@ galaxy_info:
   author: Orcun Atakan
   description: Ansible galaxy role for updating Microsoft Windows systems
   role_name: windows_update
+  namespace: oatakan
   company: Red Hat
 
   license: MIT
 
-  min_ansible_version: 2.5
+  min_ansible_version: '2.9'
 
   platforms:
     - name: Windows
       versions:
         - all
-
-  cloud_platforms:
-    - amazon
-    - google
-    - azure
-    - azure
-    - vmware
-    - ovirt
 
   galaxy_tags:
     - windows
